--- a/doc/Latex/content/Auswertung.tex
+++ b/doc/Latex/content/Auswertung.tex
@@ -16,6 +16,7 @@ hh		\item [\textbf{Objekt als OBJ speichern:}] \textbf{File} $\rightarrow$ \text
 		\newline
 		\item [\textbf{Raster de/aktivieren:}] '\textbf{g}' - Taste
 		\item [\textbf{Punkte de/aktivieren:}] '\textbf{p}' - Taste
+		\item [\textbf{Kanten de/aktivieren:}] '\textbf{k}' - Taste
 		\newline
 		\item [\textbf{Punkt/e auswählen:}] \textbf{Strg} + Klick auf Punkt
 		\item [\textbf{Neuer Punkt:}] \textbf{rechte Maustaste} auf Raster oder Objekt
@@ -28,6 +29,8 @@ hh		\item [\textbf{Objekt als OBJ speichern:}] \textbf{File} $\rightarrow$ \text
 		\item [\textbf{Unterteilung zurücksetzen:}] '\textbf{Strg + Z}
 		\newline
 		\item [\textbf{Gewichtung der ausgewählte Punkte:}] \textbf{Vertex} $\rightarrow$ \textbf{VertexWeight}
+		\newline
+		\item [\textbf{Smoothing:}]  '\textbf{l}' - Taste je Schritt
 	\end{labeling}
 		
 	\section{\Large SHADER}
@@ -123,6 +126,9 @@ Um einen Vertex auszuwählen, werden die Welt-Koordinaten die in der Klasse GLWi
 	
 	\section{\Large ALGORITHMEN}
 	
+	\subsection{Kamera}
+	
+	
 \begin{lstlisting}
 
 projection = glm::perspective(glm::radians(field_of_view), aspect, near_clip, far_clip);
@@ -166,11 +172,93 @@ camera_position += camera_position_delta;
 camera_look_at = camera_position + camera_direction * 1.0f;
 
 
-
 \end{lstlisting}
 	
+	\subsection{Shader}
+	
+	\subsubsection{Vertex Shader}
 	
 	
+	\begin{lstlisting}
+vec4 vertex = vec4(vertex_position, 1.0);
+
+/*
+ * Transformation der Normale und der Position für den Fragmentshader
+ */
+normal = normalize(normalMatrix * vertex_normal);
+position = vec3(viewMatrix * modelMatrix * vertex);
+
+/*
+ * Grundfarben ändern sich nicht pro Pixel - können jetzt berechnet werden
+ */
+ambient = materialAmbient * lightAmbient;
+diffuse = materialDiffuse * lightDiffuse;
+ambientGlobal = materialAmbient * lightGlobal;
+
+
+/*
+ * Dynamische anpassung der Punktgröße abhängig von der Entfernung der Kamera
+ */
+float distance = length(vertex_position - cameraPos);
+gl_PointSize =  radius_attr/distance;
+
+
+/*
+ * Vertex-Position in OpenGL setzen
+ */
+gl_Position = projectionMatrix * viewMatrix * modelMatrix * vertex;
+	
+	\end{lstlisting}
+	
+	\subsubsection{Fragment Shader}
+	
+	
+	\begin{lstlisting}
+/*
+ * Lichtberechnung
+ */
+vec3 N = normalize(normal);
+vec3 L = normalize(lightPosition - position);
+vec3 R = 2 * dot(L, N) * N - L;
+
+float cosTheta = max(dot(L, N), 0.0);
+float cosAlpha = max(dot(N, R), 0.0);
+
+float attenuation = 1.0 / (constantAttenuation + length(L) * linearAttenuation);
+
+vec3 tempColor = VertexIn.vertex_color + ambientGlobal;
+
+if (cosTheta > 0.0) {
+   tempColor += attenuation * (diffuse * cosTheta + ambient);
+   tempColor +=   attenuation
+   				* materialSpecular
+                	* lightSpecular
+                	* pow(cosAlpha, materialShininess);
+    }
+
+
+/*
+ * ist das Radius Attribut gesetzt handelt es sich um einen Punkt
+ */
+if(VertexIn.radius > 0){
+	vec3 N;
+	N.xy = gl_PointCoord * 2.0 - vec2(1.0);
+	float mag = dot(N.xy, N.xy);
+	
+	/*
+	 * Pixel außerhalb des Kreises werden nicht dargestellt
+	 */
+	if (mag > 1.0) discard;  
+	
+	N.z = sqrt( 1.0 - mag);
+}
+
+/*
+ * Pixelfarbe in OpenGL setzen
+ */
+color = vec4(tempColor, 1.0);
+	
+	\end{lstlisting}
 	
 	
 	\section{\Large PROBLEME UND LÖSUNGEN}
