fixed error in doc

--- a/doc/Latex/macros/newcommands.tex
+++ b/doc/Latex/macros/newcommands.tex
@@ -12,7 +12,10 @@
 \newcommand{\Prob}{\mathscr{P}}    % Hamilton
 \newcommand{\unity}{\mathds{1}}   % Real
 
-\renewcommand{\i}{\mathrm{i}}   % imaginäre Einheit
+\newcommand\tab[1][1cm]{\hspace*{#1}}
+
+\renewcommand{\i}{\mathrm{i}}   % imaginï¿½re Einheit
+
 
 
 
