--- a/doc/Latex/content/Auswertung.tex
+++ b/doc/Latex/content/Auswertung.tex
@@ -1,4 +1,3 @@
-\newcommand\tab[1][1cm]{\hspace*{#1}}
 \newpage
 	\section{\Large EINLEITUNG}
 	Die in diesem Dokument beschriebene Software, ist eine Modeler-Software, die dazu imstande ist Körper und Flächen zu erstellen. Außerdem lassen sich die erstellten Modelle als OBJ-Datei speichern. Gespeicherte Modelle können geladen und auch bearbeitet werden.\newline
@@ -123,7 +122,7 @@ Für die Verwendung im Renderer liefert die Funktion \textbf{getVerticesAndNorma
 Für die Darstellung der Kanten werden alle Kanten des Meshes durchlaufen und die Anfangs-, sowie End-Vertices in einem std::vector gespeichert.\newline
 Um einen Vertex auszuwählen, werden die Welt-Koordinaten die in der Klasse GLWidget bestimmt wurden an die Funktion \textbf{selectVertex()} übergeben. Hier werden nun alle Vertices überprüft ob diese auf den Koordinaten liegen. In diesem Prozess wird eine kleine Abweichung toleriert. Ist der angeklickte Vertex schon in der Liste, wird er entfernt.
 		
-	
+	\newpage
 	\section{\Large ALGORITHMEN}
 	
 	\subsection{Kamera}
@@ -136,11 +135,11 @@ projection = glm::perspective(glm::radians(field_of_view), aspect, near_clip, fa
 /*
  * Achse für Pitch-Rotation festlegen
  */
-glm::vec3 axis = glm::cross(camera_direction, glm::vec3(0.0f, 1.0f, 0.0f););
+glm::vec3 axis = glm::cross(camera_direction,glm::vec3(0.0f, 1.0f, 0.0f););
 
 /*
  * Quaternion für Pitch auf Basis des Kamera-Pitchwinkels berechnen
- * pitch wird durch Mausbewegung in horizontaler Richtung beeinflusst
+ * Pitch wird durch Mausbewegung in horizontaler Richtung beeinflusst
  */
 glm::quat pitch_quat = glm::angleAxis(camera_pitch, axis);
 
@@ -197,7 +196,7 @@ ambientGlobal = materialAmbient * lightGlobal;
 
 
 /*
- * Dynamische anpassung der Punktgröße abhängig von der Entfernung der Kamera
+ * Dynamische Anpassung der Punktgröße abhängig von der Entfernung der Kamera
  */
 float distance = length(vertex_position - cameraPos);
 gl_PointSize =  radius_attr/distance;
